<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_bookItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/activity_padding">

    <ImageView
        android:id="@+id/imageView_book"
        android:layout_width="@dimen/thumbnail_size_height"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:contentDescription="@string/sample_book_name"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <RelativeLayout
        android:id="@+id/container_textViews"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_margin_left"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textView_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_book_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sample_book_price"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:id="@+id/textView_purchaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sample_book_purchase_date"
                android:textAlignment="viewEnd"
                android:textSize="@dimen/text_size_small" />

        </LinearLayout>

    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView_rightArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="0"
        app:srcCompat="@drawable/ic_chevron_right_black_24dp"
        tools:ignore="ContentDescription" />

</LinearLayout>
